styles/0-main.css
/* ... */
.router-form {

    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    box-shadow: 0px 0px 10px black;
    padding-top: 0px;
    border-radius: 5px;
    display: none;
    flex-direction: column;
    flex-wrap: nowrap;
    gap: 15px;
    min-width: 600px;
    z-index: 3;
    animation: form-animation 0.25s ease-in-out;
    font-family: var(--inter);
    overflow: auto;

    .window-frame {

        margin: 0px;
        padding: 0px;
        width: 100%;
        height: 50px;
        background-color: var(--darkblue);
        border-radius: 5px 5px 0px 0px;
        z-index: -1;
        display: flex;
        align-items: center;
        justify-content: center;

        p {
            text-transform: uppercase;
            font-weight: bolder;
            align-self: center;
            color: #fff;
        }

    }

    .nav-panel {
        padding: 0 0 0 30px;
    }

    section {

        padding: 0 30px 30px 30px;
        margin-top: 30px;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 20px;

        .form-item {

            display: flex;
            flex-direction: row;
            align-items: center;
            gap: 10px;

            label {
                flex-grow: 0;
                width: 200px;
                text-align: left;
                white-space: nowrap;
            }

        }

        &.hidden {
            display: none;
        }

    }

    input {

        width: 100%;
        padding: 8px 12px;
        border: 1px solid #ddd;
        border-radius: 4px;
        font-size: 14px;
        text-align: center;
        font-family: var(--inter);

        &:focus {
            outline: none;
            border-color: #666;
        }

    }

    label {
        font-weight: 500;
        color: #333;
    }

    button {
        align-self: center;
        margin: auto;
    }

    .interfaces-wrapper {

        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        gap: 20px;
        width: 60%;

        button {
            padding: 5px;
            font-size: 14px;
            width: fit-content;
        }

        .interfaces-container {
            padding: 8px 12px;
            border: 1px solid #ddd;
            border-radius: 4px;
            font-size: 14px;
            text-align: center;
            font-family: var(--inter);
            width: 50%;
        }

    }

    table {

        width: 100%;
        border-collapse: collapse;
        border: 1px solid #ddd;
        transition: all 0.2s ease;
        overflow: auto;

        * {
            box-sizing: border-box;
            border: 1px solid #ddd;
            padding: 8px;
            transition: background-color 0.2s ease;
            text-align: center;
        }

        td,
        th {
            width: 150px;
        }

        th {
            background-color: rgb(223, 191, 12);
            color: #333;
            font-weight: 600;
        }

        tr:hover {
            background-color: #f9f5d7;
        }

        td {
            padding: 0px;
            margin: 0px;
            height: 40px;
        }

        .ip-field {

            display: flex;
            flex-direction: row;
            gap: 4px;
            border: none;

            p {
                font-weight: normal;
                border: none;
            }


        }
    }

}

.dhcp-relay-form {

    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    box-shadow: 0px 0px 10px black;
    padding-top: 0px;
    border-radius: 5px;
    display: none;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    z-index: 1000;
    animation: form-animation 0.3s ease-in-out;
    font-family: var(--inter);
    min-width: 300px;

    .window-frame {

        margin: 0 0 10px 0;
        padding: 0 0 0 0;
        width: 100%;
        height: 50px;
        background-color: var(--darkblue);
        border-radius: 5px 5px 0px 0px;
        z-index: -1;
        display: flex;
        align-items: center;
        justify-content: center;

        p {
            text-transform: uppercase;
            font-weight: bolder;
            align-self: center;
            color: #fff;
        }

    }

    section {

        padding: 0 30px 30px 30px;
        display: flex;
        flex-direction: column;
        gap: 10px;

        &.hidden {
            display: none;
        }

        .form-item {

            display: flex;
            flex-direction: row;
            align-items: center;
            gap: 10px;

            label {
                flex-grow: 0;
                width: 200px;
                text-align: left;
                white-space: nowrap;
                margin: auto;
            }

            &.hidden {
                display: none;
            }

        }


    }

    input,
    select {
        width: 100%;
        padding: 8px 12px;
        border: 1px solid #ddd;
        border-radius: 4px;
        font-size: 14px;
        font-family: var(--inter);
        text-align: center;
    }

    input {
        &:focus {
            outline: none;
            border-color: #666;
        }
    }

    label {
        align-self: flex-start;
        font-weight: 500;
        color: #333;
    }

    p {
        text-transform: uppercase;
        font-weight: bolder;
        align-self: center;
        color: #fff;
    }

    .button-wrapper {
        align-self: center;
        margin-bottom: 30px;
    }

}
/* ... */

